--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
     <div class="container-fluid">
         <div id="about" class="row about-section">
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Who am I ?</h3>
+                <h3 class="font-weight-light">Who am I?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Web Developer | Backend Developer Located In Our Lovely Earth</h5>
-                <p class="mt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit.sit amet, Qui deserunt
-                    consequatur fugit repellendusillo voluptas?</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+                <p class="mt-20">I am a passionate web and backend developer with a strong foundation in building efficient and scalable applications. I thrive on solving complex problems and creating seamless user experiences.</p>
+                <button class="btn btn-outline-danger"><i class="icon-down-circled2"></i>Download My CV</button>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -95,17 +94,10 @@
                     <li><span>Address</span> : Kathmandu, Nepal</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" target="_blank"
-                            href="https://www.facebook.com/profile.php?id=100025050126412"><i class="ti-facebook"
-                                aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link"
-                            href="https://www.linkedin.com/in/sarbada-sanjel-30621424a/" target="_blank"><i
-                                class="ti-linkedin" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" target="_blank"
-                            href="https://www.instagram.com/sarbada_10?igsh=djhlNTA3a3VpM2x4"><i class="ti-instagram"
-                                aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="https://github.com/sarbada1" target="_blank"><i
-                                class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" target="_blank" href="https://www.facebook.com/profile.php?id=100025050126412"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" target="_blank" href="https://www.linkedin.com/in/sarbada-sanjel-30621424a/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" target="_blank" href="https://www.instagram.com/sarbada_10?igsh=djhlNTA3a3VpM2x4"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" target="_blank" href="https://github.com/sarbada1"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="col-lg-4 about-card">
@@ -136,9 +128,9 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     </div>
+    
 
     <!--Resume Section-->
     <section class="section" id="resume">
@@ -475,8 +467,8 @@
             <p class="small mb-0 text-light">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i> By <a href="http://devcrud.com" target="_blank"><span
-                        class="text-danger" title="Bootstrap 4 Themes and Dashboards">DevCRUD</span></a>
+                    class="ti-heart text-danger"></i> By <a href="https://www.facebook.com/profile.php?id=100025050126412" target="_blank"><span
+                        class="text-danger" title="sarbada">Sarbada</span></a>
             </p>
         </div>
     </footer>
