--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
                         <a href="#resume" class="nav-link">Resume</a>
                     </li>
                 </ul>
-            
+                <ul class="navbar-nav brand">
+                    <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
+                    <li class="brand-txt">
+                        <h5 class="brand-title">Sarbada Sanjel</h5>
+                        <div class="brand-subtitle">Web Developer | Backend Developer</div>
+                    </li>
+                </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="#portfolio" class="nav-link">Portfolio</a>
