--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Sarbada landing page.">
     <meta name="author" content="Devcrud">
-    <title>Sarbada Landing page </title>
+    <title>Sarbada - Portfolio </title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/sarbada.css">
@@ -158,12 +158,20 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2023 - Present</h6>
+                            <h6 class="title text-danger">April 2023 - Present</h6>
                             <p>PHP Developer</p>
                             <p class="subtitle">Working as a PHP developer at Colleges Nepal, specializing in backend development and application optimization.</p>
                             <hr>
                         </div>
+                          <div class="card-body">
+                            <h6 class="title text-danger">Jan 2023 - April 2023</h6>
+                            <p>PHP intern</p>
+                            <p class="subtitle">Stareted with understanding the basics of PHP, including syntax,
+                                variables, control structure and functions </p>
+                            <hr>
+                        </div>
                     </div>
+                    
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
