--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                           <div class="card-body">
                             <h6 class="title text-danger">Jan 2023 - April 2023</h6>
                             <p>PHP intern</p>
-                            <p class="subtitle">Stareted with understanding the basics of PHP, including syntax,
+                            <p class="subtitle">Started with understanding the basics of PHP, including syntax,
                                 variables, control structure and functions </p>
                             <hr>
                         </div>
