--- a/index.html
+++ b/index.html
@@ -403,15 +403,15 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="">
+                        <form action="https://formspree.io/f/xbjnvogl">
                             <div class="form-group">
-                                <input class="form-control" type="text" placeholder="Name *" required>
+                                <input class="form-control" type="text" placeholder="Name *" name="name" required>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="email" placeholder="Email *" required>
+                                <input class="form-control" type="email" placeholder="Email *" name="email" required>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" id=" placeholder=" Message *" rows="7"
+                                <textarea class="form-control" id="" placeholder=" Message *"  name="message" rows="7"
                                     required></textarea>
                             </div>
                             <div class="form-group ">
@@ -428,7 +428,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+977 9861992016</span></h6>
+                                <h6 class="d-inline">Phone : <br> <a href="tel:9861992016"> <span class="text-muted">+977 9861992016</span></a></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -444,8 +444,8 @@
                                 <i class="ti-envelope icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span
-                                        class="text-muted">sanjelsarbada12@gmail.com</span></h6>
+                                <h6 class="d-inline">Email :<br> <a href="mailto:sanjelsarbada12@gmail.com"> <span
+                                        class="text-muted">sanjelsarbada12@gmail.com</span> </a></h6>
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
