--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="https://formspree.io/f/xbjnvogl">
+                        <form action="https://formspree.io/f/xbjnvogl" method="post">
                             <div class="form-group">
                                 <input class="form-control" type="text" placeholder="Name *" name="name" required>
                             </div>
