--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <meta name="description" content="Start your development with Sarbada landing page.">
     <meta name="author" content="Devcrud">
     <title>Sarbada - Portfolio </title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+      <link rel="icon" type="image/x-icon" href="./assets/imgs/avatar.jpg">
+
     <link rel="stylesheet" href="assets/css/sarbada.css">
 </head>
 
