--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Sarbada - Portfolio </title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-      <link rel="icon" type="image/x-icon" href="./assets/imgs/avatar.jpg">
+      <link rel="icon" type="image/x-icon" href="./assets/imgs/header.jpg">
 
     <link rel="stylesheet" href="assets/css/sarbada.css">
 </head>
