--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <h4 class="header-subtitle">Hello, I am</h4>
                 <h1 class="header-title">Sarbada Sanjel</h1>
                 <h6 class="header-mono">Web Developer | Backend Developer</h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+          <a href="./assets/imgs/sarbadaResume.pdf" download>  
+              <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button></a>  
             </div>
         </div>
     </header>
@@ -87,7 +88,8 @@
                 <p class="mt-20">I am a passionate web and backend developer with a strong foundation in building
                     efficient and scalable applications. I thrive on solving complex problems and creating seamless user
                     experiences.</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2"></i>Download My CV</button>
+            <a href="./assets/imgs/sarbadaResume.pdf" download>      
+                <button class="btn btn-outline-danger"><i class="icon-down-circled2"></i>Download My CV</button> </a>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
