--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <button class="btn bg-primary w-lg">Hire me</button>
+          <a href="#contact">  <button class="btn bg-primary w-lg">Hire me</button> </a>
         </div>
     </section>
 
