--- a/index.html
+++ b/index.html
@@ -387,7 +387,21 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
+                 <div class="portfolio-container">
+                    <div class="col-md-6 col-lg-4 web new">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/capture.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Personal blog website</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
                 
             </div>
         </div>
