--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                  <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/imgs/capture.jpg" class="img-fluid" alt="">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/capture.jpg"></a>
                                 <div class="text-holder">
