--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
                  <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/capture.jpg" class="img-fluid" alt="">
+                            <img src="assets/imgs/Capture.JPG" class="img-fluid" alt="">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/capture.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/Capture.JPG"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Personal blog website</h6>
                                 </div>
