--- a/index.html
+++ b/index.html
@@ -17,30 +17,25 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
-    <header class="header">
-        <div class="container">
-            <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link" target="_blank"
-                        href="https://www.facebook.com/profile.php?id=100025050126412"><i class="ti-facebook"
-                            aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link"
-                        href="https://www.linkedin.com/in/sarbada-sanjel-30621424a/" target="_blank"><i
-                            class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link" target="_blank"
-                        href="https://www.instagram.com/sarbada_10?igsh=djhlNTA3a3VpM2x4"><i class="ti-instagram"
-                            aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link" href="https://github.com/sarbada1" target="_blank"><i
-                            class="ti-github" aria-hidden="true"></i></a></li>
-            </ul>
-            <div class="header-content">
-                <h4 class="header-subtitle">Hello, I am</h4>
-                <h1 class="header-title">Sarbada Sanjel</h1>
-                <h6 class="header-mono">Web Developer | Backend Developer</h6>
-          <a href="./assets/imgs/sarbadaResume.pdf" download>  
-              <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button></a>  
-            </div>
-        </div>
-    </header>
+<header class="header">
+  <div class="container">
+    <ul class="social-icons pt-3">
+      <li class="social-item"><a class="social-link" target="_blank" href="https://www.facebook.com/profile.php?id=100025050126412"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+      <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/sarbada-sanjel-30621424a/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+      <li class="social-item"><a class="social-link" target="_blank" href="https://www.instagram.com/sarbada_10?igsh=djhlNTA3a3VpM2x4"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+      <li class="social-item"><a class="social-link" href="https://github.com/sarbada1" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
+    </ul>
+    <div class="header-content">
+      <h4 class="header-subtitle">Hello, I am</h4>
+      <h1 class="header-title">Sarbada Sanjel</h1>
+      <h6 class="header-mono">Web Developer | Backend Developer</h6>
+      <a href="./assets/imgs/sarbadaResume.pdf" download>
+        <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+      </a>
+    </div>
+  </div>
+</header>
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
         <div class="container">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
