--- a/index.html
+++ b/index.html
@@ -348,9 +348,15 @@
             <div class="portfolio-container">
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="Hair cut saloon" loading="lazy">
+                        <img 
+                            src="assets/imgs/web-1-800.jpg" 
+                            srcset="assets/imgs/web-1-400.jpg 400w, assets/imgs/web-1-800.jpg 800w, assets/imgs/web-1-1200.jpg 1200w" 
+                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
+                            class="img-fluid" 
+                            alt="Hair cut saloon" 
+                            loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-1-1200.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Hair cut saloon</h6>
                             </div>
@@ -359,9 +365,15 @@
                 </div>
                 <div class="col-md-6 col-lg-4 new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-2.jpg" class="img-fluid" alt="E-commerce site" loading="lazy">
+                        <img 
+                            src="assets/imgs/web-2-800.jpg" 
+                            srcset="assets/imgs/web-2-400.jpg 400w, assets/imgs/web-2-800.jpg 800w, assets/imgs/web-2-1200.jpg 1200w" 
+                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
+                            class="img-fluid" 
+                            alt="E-commerce site" 
+                            loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-2-1200.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">E-commerce site</h6>
                             </div>
@@ -370,9 +382,15 @@
                 </div>
                 <div class="col-md-6 col-lg-4 new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/web-3.jpg" class="img-fluid" alt="Food ordering website" loading="lazy">
+                        <img 
+                            src="assets/imgs/web-3-800.jpg" 
+                            srcset="assets/imgs/web-3-400.jpg 400w, assets/imgs/web-3-800.jpg 800w, assets/imgs/web-3-1200.jpg 1200w" 
+                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
+                            class="img-fluid" 
+                            alt="Food ordering website" 
+                            loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-3-1200.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Food ordering website</h6>
                             </div>
@@ -383,9 +401,15 @@
             <div class="portfolio-container">
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
-                        <img src="assets/imgs/Capture.JPG" class="img-fluid" alt="Personal blog website" loading="lazy">
+                        <img 
+                            src="assets/imgs/Capture-800.jpg" 
+                            srcset="assets/imgs/Capture-400.jpg 400w, assets/imgs/Capture-800.jpg 800w, assets/imgs/Capture-1200.jpg 1200w" 
+                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
+                            class="img-fluid" 
+                            alt="Personal blog website" 
+                            loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/Capture.JPG"></a>
+                            <a class="img-popup" href="assets/imgs/Capture-1200.jpg"></a>
                             <div class="text-holder">
                                 <h6 class="title">Personal blog website</h6>
                             </div>
@@ -396,6 +420,7 @@
         </div>
     </div>
 </section>
+
 
     <!-- End of portfolio section -->
 
