--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-1.jpg" 
-                            srcset="assets/imgs/web-1-400.jpg 400w, assets/imgs/web-1-800.jpg 800w, assets/imgs/web-1-1200.jpg 1200w" 
+                            srcset="assets/imgs/web-1.jpg 400w, assets/imgs/web-1-800.jpg 800w, assets/imgs/web-1-1200.jpg 1200w" 
                             sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="Hair cut saloon" 
@@ -367,7 +367,7 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-2.jpg" 
-                            srcset="assets/imgs/web-2-400.jpg 400w, assets/imgs/web-2-800.jpg 800w, assets/imgs/web-2-1200.jpg 1200w" 
+                            srcset="assets/imgs/web-2.jpg 400w, assets/imgs/web-2-800.jpg 800w, assets/imgs/web-2-1200.jpg 1200w" 
                             sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="E-commerce site" 
@@ -384,7 +384,7 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-3.jpg" 
-                            srcset="assets/imgs/web-3-400.jpg 400w, assets/imgs/web-3-800.jpg 800w, assets/imgs/web-3-1200.jpg 1200w" 
+                            srcset="assets/imgs/web-3.jpg 400w, assets/imgs/web-3-800.jpg 800w, assets/imgs/web-3-1200.jpg 1200w" 
                             sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="Food ordering website" 
@@ -403,13 +403,13 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/Capture.jpg" 
-                            srcset="assets/imgs/Capture-400.jpg 400w, assets/imgs/Capture-800.jpg 800w, assets/imgs/Capture-1200.jpg 1200w" 
+                            srcset="assets/imgs/Capture.JPG 400w, assets/imgs/Capture-800.jpg 800w, assets/imgs/Capture-1200.jpg 1200w" 
                             sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="Personal blog website" 
                             loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/Capture.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/Capture.JPG"></a>
                             <div class="text-holder">
                                 <h6 class="title">Personal blog website</h6>
                             </div>
