--- a/index.html
+++ b/index.html
@@ -530,16 +530,26 @@
     <script src="assets/js/johndoe.js"></script>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/665bf0e9981b6c5647775358/1hvbia4c1';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+  var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+
+  function loadTawkToScript() {
+    var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+    s1.async = true;
+    s1.src = 'https://embed.tawk.to/665bf0e9981b6c5647775358/1hvbia4c1';
+    s1.charset = 'UTF-8';
+    s1.setAttribute('crossorigin', '*');
+    s0.parentNode.insertBefore(s1, s0);
+  }
+
+  function onScroll() {
+    window.removeEventListener('scroll', onScroll);
+    loadTawkToScript();
+  }
+
+  window.addEventListener('scroll', onScroll);
 </script>
+
 <!--End of Tawk.to Script-->
 </body>
 
