--- a/index.html
+++ b/index.html
@@ -350,8 +350,6 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-1.jpg" 
-                            srcset="assets/imgs/web-1.jpg 400w, assets/imgs/web-1-800.jpg 800w, assets/imgs/web-1-1200.jpg 1200w" 
-                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="Hair cut saloon" 
                             loading="lazy">
@@ -367,8 +365,6 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-2.jpg" 
-                            srcset="assets/imgs/web-2.jpg 400w, assets/imgs/web-2-800.jpg 800w, assets/imgs/web-2-1200.jpg 1200w" 
-                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="E-commerce site" 
                             loading="lazy">
@@ -384,8 +380,6 @@
                     <div class="portfolio-item">
                         <img 
                             src="assets/imgs/web-3.jpg" 
-                            srcset="assets/imgs/web-3.jpg 400w, assets/imgs/web-3-800.jpg 800w, assets/imgs/web-3-1200.jpg 1200w" 
-                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
                             class="img-fluid" 
                             alt="Food ordering website" 
                             loading="lazy">
@@ -402,9 +396,7 @@
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
                         <img 
-                            src="assets/imgs/Capture.jpg" 
-                            srcset="assets/imgs/Capture.JPG 400w, assets/imgs/Capture-800.jpg 800w, assets/imgs/Capture-1200.jpg 1200w" 
-                            sizes="(max-width: 400px) 400px, (max-width: 800px) 800px, 1200px" 
+                            src="assets/imgs/Capture.JPG" 
                             class="img-fluid" 
                             alt="Personal blog website" 
                             loading="lazy">
