--- a/index.html
+++ b/index.html
@@ -200,32 +200,33 @@
                                 <span class="line"></span>
                             </div>
                         </div>
-                        <div class="card-body pb-2">
-                            <h6>HTML5 &amp; CSS3</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>JavaScript</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>PHP</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>SQL</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>Laravel</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <h6>React</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
+                 <div class="card-body pb-2">
+    <h6>HTML5 &amp; CSS3</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" aria-label="HTML5 and CSS3 proficiency at 98%"></div>
+    </div>
+    <h6>JavaScript</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" aria-label="JavaScript proficiency at 75%"></div>
+    </div>
+    <h6>PHP</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-label="PHP proficiency at 90%"></div>
+    </div>
+    <h6>SQL</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" aria-label="SQL proficiency at 90%"></div>
+    </div>
+    <h6>Laravel</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" aria-label="Laravel proficiency at 60%"></div>
+    </div>
+    <h6>React</h6>
+    <div class="progress mb-3">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" aria-label="React proficiency at 50%"></div>
+    </div>
+</div>
+
                     </div>
                     <div class="card">
                         <div class="card-header">
