--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <h1 class="header-title">Sarbada Sanjel</h1>
       <h6 class="header-mono">Web Developer | Backend Developer</h6>
       <a href="./assets/imgs/sarbadaResume.pdf" download>
-        <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+          <button class="btn btn-primary btn-rounded" style="background-color: #007bff; color: #fff;">
+    Print Resume
+</button>
+
       </a>
     </div>
   </div>
@@ -46,7 +49,7 @@
             <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+<a href="#home" class="nav-link active" style="color: #000;">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
