--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Sarbada - Portfolio </title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-      <link rel="icon" type="image/x-icon" href="./assets/imgs/header.jpg">
+      <link rel="icon" type="image/x-icon" href="./assets/imgs/header.webp">
 
     <link rel="stylesheet" href="assets/css/sarbada.css">
 </head>
@@ -353,12 +353,12 @@
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
                         <img 
-                            src="assets/imgs/web-1.jpg" 
+                            src="assets/imgs/web-1.webp" 
                             class="img-fluid" 
                             alt="Hair cut saloon" 
                             loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-1.webp"></a>
                             <div class="text-holder">
                                 <h6 class="title">Hair cut saloon</h6>
                             </div>
@@ -368,12 +368,12 @@
                 <div class="col-md-6 col-lg-4 new">
                     <div class="portfolio-item">
                         <img 
-                            src="assets/imgs/web-2.jpg" 
+                            src="assets/imgs/web-2.webp" 
                             class="img-fluid" 
                             alt="E-commerce site" 
                             loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-2.webp"></a>
                             <div class="text-holder">
                                 <h6 class="title">E-commerce site</h6>
                             </div>
@@ -383,12 +383,12 @@
                 <div class="col-md-6 col-lg-4 new">
                     <div class="portfolio-item">
                         <img 
-                            src="assets/imgs/web-3.jpg" 
+                            src="assets/imgs/web-3.webp" 
                             class="img-fluid" 
                             alt="Food ordering website" 
                             loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
+                            <a class="img-popup" href="assets/imgs/web-3.webp"></a>
                             <div class="text-holder">
                                 <h6 class="title">Food ordering website</h6>
                             </div>
@@ -400,12 +400,12 @@
                 <div class="col-md-6 col-lg-4 web new">
                     <div class="portfolio-item">
                         <img 
-                            src="assets/imgs/Capture.JPG" 
+                            src="assets/imgs/Capture.webp" 
                             class="img-fluid" 
                             alt="Personal blog website" 
                             loading="lazy">
                         <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/Capture.JPG"></a>
+                            <a class="img-popup" href="assets/imgs/Capture.webp"></a>
                             <div class="text-holder">
                                 <h6 class="title">Personal blog website</h6>
                             </div>
