--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Sarbada">
     
     <!-- Open Graph (OG) meta tags for social media sharing -->
-    <meta property="og:title" content="Sarbada | Best Backend Developer">
+    <meta property="og:title" content="Sarbada | Backend Developer">
     <meta property="og:description" content="Discover Sarbada, the backend developer 
         offering expert backend development services.">
     <meta property="og:type" content="website">
@@ -20,7 +20,7 @@
     <meta property="og:image" content="https://www.sarbadasanjel.com.np/assets/imgs/header.webp">
     
     <!-- Title tag optimized for SEO -->
-    <title>Sarbada | Best Backend Developer</title>
+    <title>Sarbada | Backend Developer</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
       <link rel="icon" type="image/x-icon" href="./assets/imgs/header.webp">
