--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         offering expert backend development services.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sarbadasanjel.com.np">
-    <meta property="og:image" content="https://www.sarbadasanjel.com.np/assets/imgs/header.webp">
+    <meta property="og:image" content="https://www.sarbadasanjel.com.np/assets/imgs/ogmage.webp">
     
     <!-- Title tag optimized for SEO -->
     <title>Sarbada | Backend Developer</title>
