--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
+                    <img src="assets/imgs/header.webp" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Sarbada Sanjel</h5>
                         <div class="brand-subtitle">Web Developer | Backend Developer</div>
