--- a/index.html
+++ b/index.html
@@ -352,6 +352,18 @@
                                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
                                     aria-label="React proficiency at 50%"></div>
                             </div>
+                            <h6>Next</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 40%"
+                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                                    aria-label="Next proficiency at 40%"></div>
+                            </div>
+                            <h6>Express</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 50%"
+                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                                    aria-label="Express proficiency at 50%"></div>
+                            </div>
                         </div>
 
                     </div>
@@ -487,7 +499,7 @@
                 <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-1.webp" class="img-fluid" alt="Hair cut saloon">
+                            <img src="assets/imgs/web-1.webp" class="img-fluid lazy-load" data-src="assets/imgs/web-1.webp" alt="Hair cut saloon" >
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-1.webp"></a>
                                 <div class="text-holder">
@@ -498,7 +510,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-2.webp" class="img-fluid" alt="E-commerce site" loading="lazy">
+                            <img src="assets/imgs/web-2.webp" class="img-fluid lazy-load" data-src="assets/imgs/web-2.webp" alt="E-commerce site" >
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-2.webp"></a>
                                 <div class="text-holder">
@@ -509,8 +521,8 @@
                     </div>
                     <div class="col-md-6 col-lg-4 new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-3.webp" class="img-fluid" alt="Food ordering website"
-                                loading="lazy">
+                            <img src="assets/imgs/web-3.webp" data-src="assets/imgs/web-3.webp" class="img-fluid lazy-load" alt="Food ordering website" 
+                               >
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-3.webp"></a>
                                 <div class="text-holder">
@@ -523,8 +535,8 @@
                 <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/Capture.webp" class="img-fluid" alt="Personal blog website"
-                                loading="lazy">
+                            <img src="assets/imgs/Capture.webp" data-src="assets/imgs/Capture.webp" class="img-fluid lazy-load" alt="Personal blog website" 
+                           >
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/Capture.webp"></a>
                                 <div class="text-holder">
@@ -645,7 +657,7 @@
     <!-- Google mpas -->
 
     <!-- JohnDoe js -->
-    <script src="assets/js/johndoe.js"></script>
+    <script src="assets/js/sarbada.js"></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
