--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                         <h6 class=header-mono>Web Developer | Backend Developer</h6><a
                                                 href=./assets/imgs/sarbadaResume.pdf download><button
                                                         class="btn btn-primary btn-rounded"
-                                                        style=background-color:#007bff;color:#fff>Print
+                                                        style=color:#fff>Download
                                                         Resume</button></a>
                                 </div>
                         </div>
