Enhance SEO and Open Graph metadata in index.html
Updated SEO and Open Graph meta tags in index.html.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!doctype html>
         <html lang=en>
+<head>
+    <!-- Basic Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <head>
+    <!-- Title (60 chars max for SEO) -->
+    <title>Sarbada Sanjel | Expert Backend Developer</title>
 
+    <!-- SEO Meta -->
+    <meta name="description" content="Sarbada Sanjel is an expert backend developer specializing in scalable, secure, and high-performance backend solutions. Hire a professional backend developer today.">
+    <meta name="author" content="Sarbada Sanjel">
+    <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="22yTgiiZ6MK2kmJnOaqOymLvLC-yfAORTzCB5eAJ5iE">
 
-                <meta charset=UTF-8>
-                <meta content="width=device-width,initial-scale=1,shrink-to-fit=no" name=viewport>
-                <meta name="google-site-verification" content="22yTgiiZ6MK2kmJnOaqOymLvLC-yfAORTzCB5eAJ5iE" />
-                <meta content="Looking for the best backend developer? Sarbada offers top-notch backend development services.
-        Contact Sarbada for expert backend solutions." name=description>
-                <meta content=Sarbada name=author>
-                <meta content="Sarbada | Backend Developer" property=og:title>
-                <meta content="Discover Sarbada, the backend developer 
-        offering expert backend development services." property=og:description>
-                <meta content=website property=og:type>
-                <meta content=https://www.sarbadasanjel.com.np property=og:url>
-                <meta content=https://www.sarbadasanjel.com.np/assets/imgs/ogmage.webp property=og:image>
-                <title>Sarbada | Backend Developer</title>
-                <link href=assets/vendors/themify-icons/css/themify-icons.css rel=stylesheet>
-                <link href=./assets/imgs/avatar.webp rel=icon type=image/x-icon>
-                <link href=assets/css/sarbada.css rel=stylesheet>
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.sarbadasanjel.com.np/">
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Sarbada Sanjel | Expert Backend Developer">
+    <meta property="og:description" content="Discover Sarbada Sanjel, a professional backend developer delivering scalable, secure, and efficient backend solutions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sarbadasanjel.com.np/">
+    <meta property="og:image" content="https://www.sarbadasanjel.com.np/assets/imgs/ogimage.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Sarbada Sanjel">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sarbada Sanjel | Expert Backend Developer">
+    <meta name="twitter:description" content="Hire Sarbada Sanjel for scalable and secure backend development solutions.">
+    <meta name="twitter:image" content="https://www.sarbadasanjel.com.np/assets/imgs/ogimage.webp">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./assets/imgs/avatar.webp" type="image/webp">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="assets/css/sarbada.css">
+
                 <style>
                         .header .container {
                                 position: relative;
